# CSU34016_FunctionalProgramming

./: identity.txt  stack.yaml
.stack-work/: stack.sqlite3
.stack-work/install/feff23cc/lib/x86_64-windows-ghc-9.6.6/ex1-1.0.0.0-BgxGyVKBDanGLEA2jCtwi3/: Ex1.hi
.stack-work/install/feff23cc/lib/x86_64-windows-ghc-9.6.6/ex1-1.0.0.0-CSh9aNU1e579pFRAYdxdVU/: Ex1.hi
.stack-work/install/feff23cc/pkgdb/: ex1-1.0.0.0-BgxGyVKBDanGLEA2jCtwi3.conf  ex1-1.0.0.0-CSh9aNU1e579pFRAYdxdVU.conf  package.cache
Exercise1/: Ex1.rns
Exercise1/src/: Ex1.hs
Exercise1/test/: Spec.hs
Exercise2/: Ex2.rns  Exercise2.md
Exercise2/.stack-work/: stack.sqlite3
Exercise2/.stack-work/install/672630cb/lib/x86_64-windows-ghc-9.4.8/ex2-1.0.0.0-79nc3VmUcE07QBQYWagt7X/: Ex2.hi  Test2Support.hi
Exercise2/.stack-work/install/672630cb/pkgdb/: ex2-1.0.0.0-79nc3VmUcE07QBQYWagt7X.conf  package.cache
Exercise2/src/: Ex2.hs
Exercise3/: Ex3.rns  ex3.cabal
Exercise3/src/: Ex3.hs  Main.hs  Test3Support.lhs
Exercise3/test/: Spec.hs
Exercise4/: Ex4.rns  ex4.cabal
Exercise4/src/: Ex4.hs  Main.hs
Exercise4/test/: Spec.hs
Exercise5/: Arithmetic.thr  Boolean.thr  Ex5.hs  Ex5.rns  Ex5Q1.thr  Ex5Q2.thr  Ex5Q3.thr  Ex5Q4.thr  List.hs  List.thr
